--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,17 @@
     <string name="username">Логин</string>
     <string name="password">Пароль</string>
     <string name="repeatPassword">Повторите пароль</string>
+    <string name="LogIn">Войти</string>
+    <string name="name">Название</string>
+    <string name="about">Описание</string>
+    <string name="price">Цена</string>
+    <string name="add">Добавить +</string>
+    <string name="buy">Купить</string>
+    <string name="count">Количество</string>
+    <string-array name="categories">
+        <item>"Фрукты"</item>
+        <item>"Овощи"</item>
+    </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
